tracing-ge/servicea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicea
    version: v1
  name: servicea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
      version: v1
  template:
    metadata:
      labels:
        app: servicea
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: servicea
          image: quay.io/rh_ee_lfalero/ossm-tracing-servicea:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: servicea
  labels:
    app: servicea
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: servicea
